# CARL

./: .env.example  .gitignore  README.md  paper.md  pyproject.toml  requirements.txt
carl/: __init__.py  config.py
carl/analysis/: __init__.py  diagnostics.py  metrics.py  ope.py  tables.py
carl/baselines/: __init__.py  causal.py  fixed_baselines.py  oracles.py  predictive.py  solo_only.py
carl/behavior/: __init__.py  exploit.py  logger.py  policy.py  probe.py
carl/calibration/: __init__.py  conformal.py
carl/data/: __init__.py  loaders.py  splits.py
carl/dr/: __init__.py  advantage.py  dr_scores.py  ipw.py  shrinkage.py
carl/features/: __init__.py  bm25.py  encoder.py  extract.py  solo_probe.py
carl/llm/: __init__.py  backend.py  mock_backend.py  openai_backend.py
carl/nuisances/: __init__.py  crossfit.py  heads.py
carl/policy/: __init__.py  fixed.py  greedy.py  lcb.py
carl/protocols/: __init__.py  base.py  catalog.py  debate.py  prompts.py  propose_verify.py  self_reflect.py  solo.py  verify.py
carl/rewards/: __init__.py  code.py  judge.py  math.py  qa.py  router.py
carl/runner/: __init__.py  pipeline.py
carl/utils/: __init__.py  hashing.py  logging.py  seeding.py
configs/: code.yaml  default.yaml  math.yaml  qa.yaml
scripts/: 01_download_data.py  02_collect_logs.py  03_train.py  04_calibrate.py  05_evaluate.py  06_run_all.py  smoke_test.sh
tests/: conftest.py  test_behavior_policy.py  test_conformal.py  test_dr_scores.py  test_end_to_end_smoke.py  test_rewards.py  test_treatment_hash.py
